@startuml
class Student {
  - _lastName : String
  - _firstName : String
  - _patronymic : String?
  - _phone : String?
  - _telegram : String?
  - _email : String?
  + id : Int
  + lastName : String
  + firstName : String
  + patronymic : String?
  + phone : String?
  + telegram : String?
  + email : String?
  + github : String?
  + displayInfo() : Unit
  + toString() : String
  + equals(other: Any?) : Bool
}

class Student_short {
  - _initials : String
  - _contact : String?
  + id : Int
  + initials : String
  + contact : String?
  + github : String?
}

abstract class BaseStudent {
  # _id : Int
  # _github : String?
}

BaseStudent <|-- Student
BaseStudent <|-- Student_short
@enduml